# video-to-live-photo

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  THIRD_PARTY_NOTICES.md  build_windows.ps1  livephoto.spec  pyproject.toml  requirements-dev.txt  requirements.txt  run_gui.py  启动程序.bat  安装依赖.bat
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  COMPATIBILITY.md  DEVELOPMENT.md  PROJECT_CODE_AND_GIT_GUIDE.md
docs/superpowers/plans/: 2026-07-18-selective-multi-clip-ui.md  2026-07-18-ui-polish.md
docs/superpowers/specs/: 2026-07-18-selective-multi-clip-ui-design.md  2026-07-18-ui-polish-design.md
livephoto/: __init__.py  __main__.py  app.py  cli.py  qt_compat.py
livephoto/core/: __init__.py  android.py  apple.py  iso_bmff.py  jpeg.py  models.py  naming.py  pipeline.py  probe.py  tools.py  transcode.py  vivo.py
livephoto/ui/: __init__.py  main_window.py  theme.py  time_spinbox.py  worker.py
scripts/: capture_ui.py  check_markdown_links.py  check_repository.py  dump_mov_atoms.py  make_sample_video.py  verify_bundle.py
tests/: test_android.py  test_apple.py  test_cli.py  test_documentation.py  test_models.py  test_naming.py  test_pipeline.py  test_project_metadata.py  test_repository_hygiene.py  test_scripts.py  test_time_spinbox.py  test_tools.py  test_transcode.py  test_ui.py  test_vivo.py
